Checkout transaction feature implemented

--- a/resources/assets/sass/checkout.scss
+++ b/resources/assets/sass/checkout.scss
@@ -1,5 +1,11 @@
 .checkout{
 
+    .page-header {
+        button{
+            margin-right: 5px;
+        }
+    }
+
     #c_p_error{
         display: none;
     }
