--- a/resources/assets/sass/products.scss
+++ b/resources/assets/sass/products.scss
@@ -5,6 +5,15 @@
         }
     }
 
+    .product-search{
+        margin: 15px 0px;
+        height: 30px;
+
+        #product-search{
+            width: 350px;
+        }
+    }
+
     .table {
         font-size: 16px;
         font-weight: 400;
