Implemented project requirement changes

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,4 +9,5 @@
 @import "add_product";
 @import "edit_product";
 @import "checkout";
-@import "transactions";
+@import "profit";
+@import "receipts";
