products delete cascade removed and partial dues clearing for receipts

--- a/resources/assets/sass/receipts.scss
+++ b/resources/assets/sass/receipts.scss
@@ -5,7 +5,7 @@
         }
     }
 
-    #receipt_error{
+    #error{
         display:none;
     }
 
@@ -44,4 +44,18 @@
         text-align:center;
     }
 
+    #clear-dues{
+
+        .modal-body{
+            h3{
+                margin : 5px 0px;
+            }
+            display: block;
+            height: 320px;
+
+            .btn, input{
+                margin : 10px 0px;
+            }
+        }
+    }
 }
